[package]
name = "neweden"
version = "0.1.2"
authors = ["David Soria Parra <dsp@experimentalworks.net>"]
edition = "2018"
license = 'MIT'
repository = 'https://github.com/dsp/neweden'
description = 'Library for system inforamtion, wayfinding and range queries in Eve Online'
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
database = ["diesel"]

[dependencies]
anyhow = "^1.0"
diesel = { version = "^1.0", optional = true, features = ["postgres"] }
pathfinding = "^2.0"
rstar = "^0.7"
thiserror = "^1.0"
