[package]
name = "neweden"
version = "0.3.1"
authors = ["David Soria Parra <dsp@experimentalworks.net>"]
edition = "2021"
license = 'MIT'
repository = 'https://github.com/dsp/neweden'
description = 'Library for system inforamtion, wayfinding and range queries in Eve Online'
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
postgres = ["diesel"]
sqlite = ["rusqlite"]

[dependencies]
anyhow = "^1"
diesel = { version = "^1", optional = true, features = ["postgres"] }
rusqlite = { version = "^0.29", optional = true }
pathfinding = "^4"
rstar = "^0.11"
thiserror = "^1"
